fix: nav text align

--- a/style.css
+++ b/style.css
@@ -17,6 +17,6 @@ IMG.displayed {
 .logo{
 	height: 15px;
 }
-footer{
+footer nav{
 	text-align: center;
 }
